learn/install/helm/release/istio-ingressgateway.yaml
NAME: istio-ingressgateway
LAST DEPLOYED: Mon Jun 15 10:56:25 2026
NAMESPACE: istio-system
STATUS: deployed
REVISION: 1
CHART: gateway
VERSION: 1.27.1
APP_VERSION: 1.27.1
TEST SUITE: None
USER-SUPPLIED VALUES:
podAnnotations:
  cluster-autoscaler.kubernetes.io/safe-to-evict: "true"

COMPUTED VALUES:
_internal_defaults_do_not_set:
  additionalContainers: []
  affinity: {}
  annotations: {}
  autoscaling:
    autoscaleBehavior: {}
    enabled: true
    maxReplicas: 5
    minReplicas: 1
    targetCPUUtilizationPercentage: 80
    targetMemoryUtilizationPercentage: {}
  containerSecurityContext: {}
  env: {}
  envVarFrom: []
  imagePullPolicy: ""
  imagePullSecrets: []
  initContainers: []
  kind: Deployment
  labels:
    istio.io/dataplane-mode: none
  lifecycle: {}
  minReadySeconds: null
  name: ""
  networkGateway: ""
  nodeSelector: {}
  podAnnotations:
    inject.istio.io/templates: gateway
    prometheus.io/path: /stats/prometheus
    prometheus.io/port: "15020"
    prometheus.io/scrape: "true"
    sidecar.istio.io/inject: "true"
  podDisruptionBudget: {}
  priorityClassName: ""
  rbac:
    enabled: true
  readinessProbe: {}
  replicaCount: null
  resources:
    limits:
      cpu: 2000m
      memory: 1024Mi
    requests:
      cpu: 100m
      memory: 128Mi
  revision: ""
  securityContext: {}
  service:
    annotations: {}
    externalIPs: []
    externalTrafficPolicy: ""
    ipFamilies: []
    ipFamilyPolicy: ""
    loadBalancerIP: ""
    loadBalancerSourceRanges: []
    ports:
    - name: status-port
      port: 15021
      protocol: TCP
      targetPort: 15021
    - name: http2
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
    type: LoadBalancer
  serviceAccount:
    annotations: {}
    create: true
    name: ""
  strategy: {}
  terminationGracePeriodSeconds: 30
  tolerations: []
  topologySpreadConstraints: []
  volumeMounts: []
  volumes: []
podAnnotations:
  cluster-autoscaler.kubernetes.io/safe-to-evict: "true"

HOOKS:
MANIFEST:
---
# Source: gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    app.kubernetes.io/name: istio-ingressgateway
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "istio-ingressgateway"
    app.kubernetes.io/part-of: "istio"
    app.kubernetes.io/version: "1.27.1"
    helm.sh/chart: gateway-1.27.1
    app: istio-ingressgateway
    istio: ingressgateway
    "istio.io/dataplane-mode": "none"
  annotations:
    {}
spec:
  type: LoadBalancer
  ports:
    - name: status-port
      port: 15021
      protocol: TCP
      targetPort: 15021
    - name: http2
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
---
# Source: gateway/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    app.kubernetes.io/name: istio-ingressgateway
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "istio-ingressgateway"
    app.kubernetes.io/part-of: "istio"
    app.kubernetes.io/version: "1.27.1"
    helm.sh/chart: gateway-1.27.1
    app: istio-ingressgateway
    istio: ingressgateway
    "istio.io/dataplane-mode": "none"
  annotations:
    {}
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
        inject.istio.io/templates: gateway
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15020"
        prometheus.io/scrape: "true"
        sidecar.istio.io/inject: "true"
      labels:
        sidecar.istio.io/inject: "true"
        app: istio-ingressgateway
        istio: ingressgateway
        app.kubernetes.io/name: istio-ingressgateway
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/instance: "istio-ingressgateway"
        app.kubernetes.io/part-of: "istio"
        app.kubernetes.io/version: "1.27.1"
        helm.sh/chart: gateway-1.27.1
        "istio.io/dataplane-mode": "none"
    spec:
      serviceAccountName: istio-ingressgateway
      securityContext:
        # Safe since 1.22: https://github.com/kubernetes/kubernetes/pull/103326
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "0"
      containers:
        - name: istio-proxy
          # "auto" will be populated at runtime by the mutating webhook. See https://istio.io/latest/docs/setup/additional-setup/sidecar-injection/#customizing-injection
          image: auto
          securityContext:
            capabilities:
              drop:
              - ALL
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsUser: 1337
            runAsGroup: 1337
            runAsNonRoot: true
          ports:
          - containerPort: 15090
            protocol: TCP
            name: http-envoy-prom
          resources:
            limits:
              cpu: 2000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi
      terminationGracePeriodSeconds: 30
---
# Source: gateway/templates/zzz_profile.yaml
#  Flatten globals, if defined on a per-chart basis

NOTES:
"istio-ingressgateway" successfully installed!

To learn more about the release, try:
  $ helm status istio-ingressgateway -n istio-system
  $ helm get all istio-ingressgateway -n istio-system

Next steps:
  * Deploy an HTTP Gateway: https://istio.io/latest/docs/tasks/traffic-management/ingress/ingress-control/
  * Deploy an HTTPS Gateway: https://istio.io/latest/docs/tasks/traffic-management/ingress/secure-ingress/
