learn/install/helm/release/traefik.yaml
NAME: traefik
LAST DEPLOYED: Mon Jun 15 10:45:55 2026
NAMESPACE: kube-system
STATUS: deployed
REVISION: 2
CHART: traefik
VERSION: 25.0.2+up25.0.0
APP_VERSION: v2.10.5
TEST SUITE: None
USER-SUPPLIED VALUES:
deployment:
  enabled: false
  kind: DaemonSet
global:
  systemDefaultRegistry: ""
image:
  repository: rancher/mirrored-library-traefik
  tag: 2.10.5
podAnnotations:
  prometheus.io/port: "8082"
  prometheus.io/scrape: "true"
priorityClassName: system-cluster-critical
providers:
  kubernetesIngress:
    publishedService:
      enabled: true
service:
  enabled: false
  ipFamilyPolicy: PreferDualStack
tolerations:
- key: CriticalAddonsOnly
  operator: Exists
- effect: NoSchedule
  key: node-role.kubernetes.io/control-plane
  operator: Exists
- effect: NoSchedule
  key: node-role.kubernetes.io/master
  operator: Exists

COMPUTED VALUES:
additionalArguments: []
additionalVolumeMounts: []
affinity: {}
autoscaling:
  enabled: false
certResolvers: {}
commonLabels: {}
deployment:
  additionalContainers: []
  additionalVolumes: []
  annotations: {}
  dnsConfig: {}
  enabled: false
  imagePullSecrets: []
  initContainers: []
  kind: DaemonSet
  labels: {}
  lifecycle: {}
  minReadySeconds: 0
  podAnnotations: {}
  podLabels: {}
  replicas: 1
  shareProcessNamespace: false
  terminationGracePeriodSeconds: 60
envFrom: []
experimental:
  kubernetesGateway:
    enabled: false
  plugins:
    enabled: false
extraObjects: []
global:
  systemDefaultRegistry: ""
globalArguments:
- --global.checknewversion
- --global.sendanonymoususage
hostNetwork: false
image:
  pullPolicy: IfNotPresent
  repository: rancher/mirrored-library-traefik
  tag: 2.10.5
ingressClass:
  enabled: true
  isDefaultClass: true
ingressRoute:
  dashboard:
    annotations: {}
    enabled: true
    entryPoints:
    - traefik
    labels: {}
    matchRule: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
    middlewares: []
    tls: {}
  healthcheck:
    annotations: {}
    enabled: false
    entryPoints:
    - traefik
    labels: {}
    matchRule: PathPrefix(`/ping`)
    middlewares: []
    tls: {}
livenessProbe:
  failureThreshold: 3
  initialDelaySeconds: 2
  periodSeconds: 10
  successThreshold: 1
  timeoutSeconds: 2
logs:
  access:
    enabled: false
    fields:
      general:
        defaultmode: keep
        names: {}
      headers:
        defaultmode: drop
        names: {}
    filters: {}
  general:
    level: ERROR
metrics:
  prometheus:
    entryPoint: metrics
nodeSelector: {}
persistence:
  accessMode: ReadWriteOnce
  annotations: {}
  enabled: false
  name: data
  path: /data
  size: 128Mi
podAnnotations:
  prometheus.io/port: "8082"
  prometheus.io/scrape: "true"
podDisruptionBudget:
  enabled: false
podSecurityContext:
  fsGroupChangePolicy: OnRootMismatch
  runAsGroup: 65532
  runAsNonRoot: true
  runAsUser: 65532
podSecurityPolicy:
  enabled: false
ports:
  metrics:
    expose: false
    exposedPort: 9100
    port: 9100
    protocol: TCP
  traefik:
    expose: false
    exposedPort: 9000
    port: 9000
    protocol: TCP
  web:
    expose: true
    exposedPort: 80
    port: 8000
    protocol: TCP
  websecure:
    expose: true
    exposedPort: 443
    http3:
      enabled: false
    middlewares: []
    port: 8443
    protocol: TCP
    tls:
      certResolver: ""
      domains: []
      enabled: true
      options: ""
priorityClassName: system-cluster-critical
providers:
  kubernetesCRD:
    allowCrossNamespace: false
    allowEmptyServices: false
    allowExternalNameServices: false
    enabled: true
    namespaces: []
  kubernetesIngress:
    allowEmptyServices: false
    allowExternalNameServices: false
    enabled: true
    namespaces: []
    publishedService:
      enabled: true
rbac:
  enabled: true
  namespaced: false
readinessProbe:
  failureThreshold: 1
  initialDelaySeconds: 2
  periodSeconds: 10
  successThreshold: 1
  timeoutSeconds: 2
resources: {}
securityContext:
  allowPrivilegeEscalation: false
  capabilities:
    drop:
    - ALL
  readOnlyRootFilesystem: true
service:
  annotations: {}
  annotationsTCP: {}
  annotationsUDP: {}
  enabled: false
  externalIPs: []
  ipFamilyPolicy: PreferDualStack
  labels: {}
  loadBalancerSourceRanges: []
  single: true
  spec: {}
  type: LoadBalancer
serviceAccount:
  name: ""
serviceAccountAnnotations: {}
tlsOptions: {}
tlsStore: {}
tolerations:
- key: CriticalAddonsOnly
  operator: Exists
- effect: NoSchedule
  key: node-role.kubernetes.io/control-plane
  operator: Exists
- effect: NoSchedule
  key: node-role.kubernetes.io/master
  operator: Exists
topologySpreadConstraints: []
tracing: {}
updateStrategy:
  rollingUpdate:
    maxSurge: 1
    maxUnavailable: 0
  type: RollingUpdate
volumes: []

HOOKS:
MANIFEST:
---
# Source: traefik/templates/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
    helm.sh/chart: traefik-25.0.2_up25.0.0
    app.kubernetes.io/managed-by: Helm
  name: traefik
spec:
  controller: traefik.io/ingress-controller
---
# Source: traefik/templates/validate-install-crd.yaml
###map[traefik.containo.us/v1alpha1/IngressRoute:false]#map[traefik.containo.us/v1alpha1/IngressRoute:false traefik.containo.us/v1alpha1/IngressRouteTCP:false]#map[traefik.containo.us/v1alpha1/IngressRoute:false traefik.containo.us/v1alpha1/IngressRouteTCP:false traefik.containo.us/v1alpha1/IngressRouteUDP:false]#map[traefik.containo.us/v1alpha1/IngressRoute:false traefik.containo.us/v1alpha1/IngressRouteTCP:false traefik.containo.us/v1alpha1/IngressRouteUDP:false traefik.containo.us/v1alpha1/Mi [...]
---
# Source: traefik/templates/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
    helm.sh/chart: traefik-25.0.2_up25.0.0
    app.kubernetes.io/managed-by: Helm
spec:
  entryPoints:
  - traefik
  routes:
  - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService

NOTES:
Traefik Proxy 2.10.5 has been deployed successfully on kube-system namespace !
